--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@ html, body {
     padding: 0%;
     margin: 0px;
 }
+
+#webcam {
+    position: absolute;
+    top: 0.2rem;
+    right: 0.2rem;
+    width: 30%;
+    border-radius: 0.6rem;
+}
